--- a/css/screen.css
+++ b/css/screen.css
@@ -214,3 +214,10 @@ a.positive:active {background-color:#529214;border:1px solid #529214;color:#fff;
 body .negative {color:#d12f19;}
 a.negative:hover, button.negative:hover {background-color:#fbe3e4;border:1px solid #fbc2c4;color:#d12f19;}
 a.negative:active {background-color:#d12f19;border:1px solid #d12f19;color:#fff;}
+
+/* semantic class names */
+#content {padding-right:44px;margin-right:45px;border-right:1px solid #ddd;}
+div.section, div.entry, .feeds {float:left;margin-right:10px;width:470px;}
+#footer, #header {}
+#extra-content {float:left;margin-right:10px;width:470px;}
+div#navigation {}
