Added some minimal padding, otherwise edges of letters were cutting off

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ hr   { margin-bottom:25px; }
     overflow: auto;
 }
 
+.content-wrapper h1, h2, h3, h4, p {
+	padding: 5px;
+}
+
 aside {
     width: 15%;
     display: block;
