--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,21 @@ code {
     border: 1px solid #DEDEDE;
     background-color: #F8F8FF;
     color: #444;
+    padding: 2px 4px;
+}
+
+pre {
+    background-color: #F8F8FF;
+    border: 1px solid #DEDEDE;
+    padding: 15px;
+    border-left: 1px solid #f30;
+    margin: 10px 0;
+    clear:both;
+}
+
+pre code {
+    border: none;
+    padding: 0;
 }
 
 hr {
